Add Component Support (#42)
* holding

* working components w/ new math

* working component position editing

* remove unesed state variable

* rework view dialog styling

* add view styles, and address cr feedback

* remove console, fix typo

* styling changes on edit dialog, and other places

* tests for edit view dialog

* extension-component-view tests

* rig component tests for component handlers

--- a/src/dialog-component/component.sass
+++ b/src/dialog-component/component.sass
@@ -6,16 +6,17 @@ $top-bar-dimension: 40px
   bottom: 0
   left: 0
   right: 0
-  background-color: grey
-  opacity: 0.5
+  background-color: #19171C
+  opacity: 0.75
   padding: 50
+  height: 100vh
 
 .dialog
   background-color: white
   border-radius: 5
   width: 66%
   margin: 0 auto
-  border: 2px solid black
+  border: 1px solid #DAD8DE
   position: absolute
   top: 20%
   left: 20%
@@ -60,7 +61,7 @@ $top-bar-dimension: 40px
 @mixin bottom-bar-box($color, $bg-color)
   color: $color
   background-color: $bg-color
-  border: 2px solid #7D55C7
+  border: 1px solid #7D55C7
   display: inline
   float: left
   text-align: center
@@ -71,5 +72,4 @@ $top-bar-dimension: 40px
   cursor: pointer
 
 .title
-  font-weight: bold
   font-size: 13px
