--- a/src/extension-view-dialog/div-option/component.sass
+++ b/src/extension-view-dialog/div-option/component.sass
@@ -16,13 +16,16 @@ $dimension: 70px
     @extend .extension-type-text
     color: #7D55C7
 
+  .dialog-selected
+    color: black
+
 .extension-type-box
   margin-top: 10px
   margin-right: 12px
   height: $dimension
   width: $dimension
   border-radius: 5px
-  border: 2px solid black
+  border: 1px solid #DAD8DE
   display: table-cell
   vertical-align: middle
   text-align: center
