--- a/src/extension-view-dialog/radio-option/component.sass
+++ b/src/extension-view-dialog/radio-option/component.sass
@@ -1,4 +1,11 @@
 .option-label
-  clear: left
   font-size: 12px
   margin-right: 10px
+  color: #706A7C
+
+.option-div
+  margin-top: 5px
+  margin-bottom: 5px
+
+.dialog-selected
+  color: black
