--- a/src/extension-view/component.sass
+++ b/src/extension-view/component.sass
@@ -2,6 +2,10 @@
   border: 1px solid #D3D0D6
   margin-left: auto
   margin-right: auto
+  position: relative
+
+.component-view
+  background-color: #322F37
 
 .view__wrapper
   padding: 2em
@@ -23,9 +27,24 @@
   padding-left: .8em
   color: #511798
   cursor: pointer
+  margin-top: .3em
 
 .view__descriptor
   float: left
   padding-right: .8em
   font-size: .75em
   color: #A4A4A4
+
+.view__edit_button
+  color: white
+  background-color: #7D55C7
+  border: 1px solid #7D55C7
+  text-align: center
+  width: 50px
+  height: 25px
+  vertical-align: middle
+  line-height: 25px
+  cursor: pointer
+  margin-right: .5em
+  float: right
+  font-size: .75em
