--- a/src/extension-view-dialog/div-option/component.css
+++ b/src/extension-view-dialog/div-option/component.css
@@ -18,10 +18,11 @@
   height: 70px;
   width: 70px;
   border-radius: 5px;
-  border: 2px solid black;
+  border: 1px solid #DAD8DE;
 }
 
-.extension-type-text {
+.extension-type-text{
+  color: #706A7C;
   margin: 3px;
   font-size: 10px;
   text-align: center;
