--- a/src/dialog-component/component.sass
+++ b/src/dialog-component/component.sass
@@ -46,6 +46,7 @@ $top-bar-dimension: 40px
   text-align: center
   vertical-align: middle
   line-height: $top-bar-dimension
+  font-weight: lighter
 
 .top-bar-element-left
   @extend .container__left-block
@@ -56,20 +57,24 @@ $top-bar-dimension: 40px
   @extend .top-bar-element
 
 .dialog__divider-width
-  width: 95%
+  width: 96%
 
 @mixin bottom-bar-box($color, $bg-color)
   color: $color
   background-color: $bg-color
   border: 1px solid #7D55C7
-  display: inline
   float: left
   text-align: center
   width: 80px
-  height: 25px
+  height: 30px
   vertical-align: middle
-  line-height: 25px
+  line-height: 30px
   cursor: pointer
+  font-size: 16px
+  margin-left: 20px
+  margin-top: 10px
+  margin-bottom: 30px
 
 .title
   font-size: 13px
+  font-weight: lighter
