--- a/src/extension-view-dialog/div-option/component.sass
+++ b/src/extension-view-dialog/div-option/component.sass
@@ -3,6 +3,7 @@ $dimension: 70px
 
 .extension-container__block
   @extend .container__block
+  margin: 3px
 
   .block__extension-type-label
     visibility: hidden
