--- a/src/extension-view-button/component.sass
+++ b/src/extension-view-button/component.sass
@@ -1,18 +1,31 @@
 .circle-button
-  border-width: thick
   border-radius: 50%
-  width: 50px
-  height: 50px
+  width: 48px
+  height: 48px
   margin: 0 auto
-  margin-top: 10px
-  border: 2px solid #DAD8DE
+  margin-top: -25px
+  border: 1px solid #DAD8DE
   position: relative
-  font-weight: bold
-  display: table
+  background-color: white
   cursor: pointer
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15)
+  -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15)
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15)
 
-.circle-button p
-  text-align: center
-  vertical-align: middle
-  display: table-cell
+.circle-button > img
+  display: block
+  margin-top: 17px
+  margin-left: auto
+  margin-right: auto
+
+.circle-button:hover
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.3)
+
+.button-wrapper
+  margin-top: 50px
+
+.background
+  display: block
+  margin: 0 auto
+
 
