--- a/src/rig-nav/component.sass
+++ b/src/rig-nav/component.sass
@@ -1,5 +1,5 @@
 .top-nav
-  padding: 1em
+  padding: 10px
   border-bottom: 1px solid #DAD8DE
   font-weight: lighter
 
@@ -7,11 +7,12 @@
   padding-left: 1em
   padding-right: 1em
   cursor: pointer
+  font-size: 13px
 
 .top-nav-item__selected
   border-bottom: 1px solid #511798
   color: #511798
-  padding-bottom: 1em
+  padding-bottom: 11px
 
 .top-nav-error
   padding: 1em
