make opaque_ids unique (#51)
* make opaque_ids unique

* add field for custom opaque ids when creating view

* add null check on extensionViews

--- a/src/extension-view-dialog/component.sass
+++ b/src/extension-view-dialog/component.sass
@@ -124,3 +124,9 @@
 
 .size-subcontainer__size-selection
   margin-right: 20px
+
+.opaque_id-input
+  font-size: 12px
+  margin-top: 5px
+  margin-left: 25px
+  color: #706A7C
