--- a/src/rig-nav/component.sass
+++ b/src/rig-nav/component.sass
@@ -1,21 +1,43 @@
 .top-nav
-  padding: 10px
-  border-bottom: 1px solid #DAD8DE
+  min-height: 5.5rem
+  display: flex
+  flex-direction: column
+  box-shadow: inset 0 -1px #dad8de
   font-weight: lighter
 
 .top-nav-item
-  padding-left: 1em
-  padding-right: 1em
-  cursor: pointer
+  margin-right: 2rem
+  padding: 1rem 0 0.5rem 0
   font-size: 13px
+  cursor: pointer
+
+.offset
+  margin-left: 1rem
+
+.top-nab__item-container
+  margin-top: 15px
+
+.top-nav-item__login
+  cursor: pointer
+  right: 1rem
+  margin-bottom: auto
+  position: absolute
 
 .top-nav-item__selected
-  border-bottom: 1px solid #511798
-  color: #511798
-  padding-bottom: 11px
+  box-shadow: 0 -1px 0 #6441a4 inset
+  color: #6441a4
 
 .top-nav-error
   padding: 1em
   border-bottom: 1px solid #DAD8DE
   background-color: red
   text-align: center
+
+.personal-bar
+  display: flex
+  height: 3rem
+  color: white
+  background-color: #7D55C7
+
+.personal-bar__ext-name
+  margin: auto
