--- a/src/user-dropdown/component.sass
+++ b/src/user-dropdown/component.sass
@@ -47,7 +47,7 @@
 
 .user-dropdown__menu
   position: absolute
-  text-align: right
+  text-align: left
   margin-top: 3rem
   font-size: 12px
   color: white
@@ -67,11 +67,13 @@
       >a
         color: white
         text-decoration: none
+        >img
+          margin-left: .5em
 
     list-style: none
     margin: 1rem
     padding: 0
 
 .user-dropdown__menu.open
-  height: 5.5rem
+  height: 9rem
   visibility: visible
