Add Run List + Triggers + Sign In Dialog (#103)
* initial typescript commit

* convert api to typescript

* utils and mocks to ts

* test setup to ts

* TS is life (#93)

* Adding sublists for nested instructions (#92)

* Add custom typings for files, player, and coordinator

* Add eventemitter2 types

* Convert constants to .ts

* Fix various typescript errors

* Don't specify extension of imports

* Point setupFiles to new setup.ts

* Consolidate console component

* Fix mocks and global types

* Update snapshots and mocks

* holding for rig view components

* Convert onSuccess/onFailure to use promises

* holding for extension components

* updated more components to TS

* fix token tests

* fix tests

* fixed extension-view-dialog

* Use promises instead of callbacks

* everything but rig component to ts

* fix product tests

* convert rig component to ts and fix tests

* fix things after Joshs pass

* revert component change to product-row

* fix gitattributes

* fix product tests

* add modifiers for functions

* implement logic to toggle api triggers

* right align runlist text

* styling wrapped up for runlist trigger

* sign in dialog

* remove types that came from merge

* remove more types

* fix existing test + minor formatting

* add tests for new functionality

* feedback from cr

* add example runlist

* readd runlist

* remove extra code

--- a/src/extension-view/component.sass
+++ b/src/extension-view/component.sass
@@ -20,21 +20,30 @@
   flex-direction: column
 
 .view__header
-  padding: 1em
+  padding-top: 1em
+  padding-bottom: 1em
   height: 20px
+  display: flex
+
+.view__header-container
+  display: flex
+  flex: 1
+  flex-direction: row
+  justify-content: flex-end
 
 .view__close_button
-  float: right
-  padding-left: .8em
   color: #511798
   cursor: pointer
-  margin-top: .3em
+  visibility: hidden
+
+.visible
+  visibility: visible
 
 .view__descriptor
-  float: left
-  padding-right: .8em
+  padding-right: 10px
   font-size: .75em
   color: #A4A4A4
+  margin-right: auto
 
 .view__edit_button
   color: white
@@ -47,5 +56,5 @@
   line-height: 25px
   cursor: pointer
   margin-right: .5em
-  float: right
+  align-self: flex-end
   font-size: .75em
