--- a/src/rig-nav/component.sass
+++ b/src/rig-nav/component.sass
@@ -20,8 +20,8 @@
 .top-nav-item__login
   cursor: pointer
   right: 1rem
-  margin-bottom: auto
-  position: absolute
+  margin: auto 1rem
+  align-self: flex-end
 
 .top-nav-item__selected
   box-shadow: 0 -1px 0 #6441a4 inset
