--- a/src/user-dropdown/component.sass
+++ b/src/user-dropdown/component.sass
@@ -27,23 +27,19 @@
   height: 30px
   margin: 0.3rem 0.3rem
 
-.user-dropdown__username
-  margin-right: 1.4rem
-
-.user-dropdown__username::after
-  content: '›'
-  position: absolute
+.user-dropdown__triangle
   color: #fff
-  margin-left: 10px
-  transform: rotate(90deg)
+  height: 10px
+  width: 10px
+  transform: rotate(180deg)
   -webkit-transition: transform 0.3s ease
   -moz-transition: transform 0.3s ease
   -o-transition: transform 0.3s ease
   -ms-transition: transform 0.3s ease
   transition: transform 0.3s ease
 
-.user-dropdown__username.open::after
-  transform: rotate(270deg)
+.user-dropdown__triangle.open
+  transform: rotate(0deg)
 
 .user-dropdown__menu
   position: absolute
@@ -77,3 +73,7 @@
 .user-dropdown__menu.open
   height: 9rem
   visibility: visible
+
+.user-dropdown__divider
+  width: 100%
+  border-top: 1px solid grey
