--- a/src/rig-nav/component.sass
+++ b/src/rig-nav/component.sass
@@ -44,5 +44,11 @@
   color: white
   background-color: #7D55C7
 
+.personal-bar__configurations
+  background: none
+  border: none
+  margin-top: 12px
+  cursor: pointer
+
 .personal-bar__ext-name
   margin: auto
