--- a/src/extension-view/component.sass
+++ b/src/extension-view/component.sass
@@ -4,6 +4,30 @@
   margin-right: auto
   position: relative
 
+.nono_zone:before
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 99.5%;
+  height: 100px;
+  content: "";
+  opacity: 0.6;
+  background-color: #6441a4;
+  border: 2px solid #b19dd8;
+
+.nono_zone:after
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+  width: 99.5%;
+  height: 80px;
+  content: "";
+  opacity: 0.6;
+  background-color: #6441a4;
+  border: 2px solid #b19dd8;
+
 .component-view
   background-color: #322F37
   overflow: hidden
