Realize the concept of a Project (#180)
* Implement projects

* Copy SSL certificates

* Perform back-end command variable substitutions

* Update projects for local mode

* Conditionally allow pre-existing project folder

* Conditionally allow empty project folders

* Use BEM to style the project view

* Use BEM to style the "create project" dialog

* Create the project drop-down menu

* Move extension views into the project

* Shut down hosting, if necessary

* Create a property for the current project index

* Improve front-end hosting

It now creates a cross-platform implementation that doesn't rely on a
shell to execute the command.  As a result, the child process can be
killed instead of only the spawning shell.

* Improve back-end hosting

With the assistance of a newly-required library, this implementation
mimics that of the front-end hosting.

* Stop hosting when creating a project

* Implement the mock trigger bar

* Implement mock trigger messaging

* Move mock trigger bar to extension view container

* Open tabs for documentation and tutorial

* Provide error feedback in "create project" dialog

* Implement explicitly stopping hosting

* Disable project name textbox for online extensions

For online extensions, the name is taken from the extension.  There is a
tooltip to describe the situation.

* Remove installation and configuration of Git

* Simplify the "run" script

* Add iconUrls field to ExtensionObject class

* Remove the extension manifest from local storage

This will more easily allow updating the manifest.

* Refresh online manifest if requested

* Remove "Generate Scaffolding" option

No scaffolding projects are yet available.

* Cut Down the Read Me to Just Quick Start and Trouble Shooting

Since we are moving our docs onto the dev site, the readme has been significantly simplified.

* Replace HTML-based README with PDF

Updating the documentation reflect the new st

--- a/src/extension-view-container/component.sass
+++ b/src/extension-view-container/component.sass
@@ -1,10 +1,63 @@
+=user-select($property)
+  -o-user-select: $property
+  -moz-user-select: $property
+  -ms-user-select: $property
+  -webkit-user-select: $property
+  user-select: $property
+
 .view-container
   display: flex
   flex-direction: row
-  margin: 1em
+  margin: 1rem
   flex-wrap: wrap
   align-items: stretch
 
 .view-container-wrapper
   overflow-y: auto
   height: 70vh
+
+.trigger-bar
+  display: grid
+  grid-template-columns: 3rem 7rem 8rem
+  grid-gap: 11px
+  margin: 3px
+  text-align: center
+  vertical-align: middle
+
+  &__switch
+    fill: #B7B5BF
+    stroke: #B7B5BF
+
+    &--on
+      fill: #52B46E
+      stroke: #52B46E
+
+    &-check
+      fill: #FFFFFF
+      stroke: none
+      visibility: hidden
+
+      &--on
+        transition: visibility 0s .2s
+        visibility: visible
+
+    &-handle
+      fill: #FFFFFF
+      stroke: #B7B5BF
+      transition: transform ease-out .2s
+
+      &--on
+        fill: #FFFFFF
+        stroke: #52B46E
+        transform: translateX(22px)
+
+  &__text
+    margin-top: 2px
+    font-size: smaller
+    grid-column: 2
+
+  &__button
+    grid-column: 3
+    color: white
+    background-color: #7D55C7
+    border: 2px solid #7D55C7
