Prepare for changes for configuration service (#186)
* Keep the extension view container object

Before this commit, the extension view container object was being
destroyed and created whenever the user moved from and then back to the
Extension Views.  This caused the equivalent of a refresh.  Now, the
object is created once and its display is changed whenever the user
moves from and to the Extension Views.

* Use classNames where appropriate

* Divert expected but undesirable error message

* Convert NavItem into a simple enum

* Add hasChatSupport to extension manifest types

* Improved isChatEnabled label

* Improve local-mode extension descriptions

* Show Project Overview when switching projects

* Correct action expected to display an extension

* Remove duplicate constants from run-list trigger

* Create Web socket on load instead of authorization

* Rename ExtensionFrameParams to ExtensionFrameOptions

This is in line with the naming in the Twitch coordinator.

* Correct asynchronous behavior of the Rig component

* Reduce URLs to paths in the API

* Replace the API object with a class

The enables more easily specifying whether the invocation is local or
online.  There are two instances provided for the majority of the cases
where it is known up-front which of the two invocation choices to use.

* Use a different endpont for fetchExtensionManifest

* Add zip function

This behaves much like the same-named function in Python.

* Update coordinator to 7.22.2

* Improved tests

* Use taskkill on Windows

This ensures all processes the front-end command creates are shut down.

--- a/src/extension-view-container/component.sass
+++ b/src/extension-view-container/component.sass
@@ -16,6 +16,9 @@
   overflow-y: auto
   height: 70vh
 
+  &--hidden
+    display: none
+
 .trigger-bar
   display: grid
   grid-template-columns: 3rem 7rem 8rem
