--- a/src/project-view/component.sass
+++ b/src/project-view/component.sass
@@ -2,18 +2,37 @@
   display: grid
   grid-template-columns: 1fr 8pt 1fr
   grid-gap: 8pt
-  margin-top: 8pt
+  margin: 11px
+
+  &-grid
+    display: grid
+    grid-template-columns: 7fr 3fr 3fr
+    grid-gap: 16px
+
+    &__column-1
+      grid-column: 1
+
+    &__column-1-2
+      grid-column: 1 / 3
+
+    &__column-2
+      grid-column: 2
+
+    &__column-3
+      grid-column: 3
+      display: flex
+      flex-direction: column
+      align-items: center
 
   &__button
     background-color: #6441A4
     border: 0
     color: white
     height: 15pt
-    margin-left: 8pt
     min-width: 8em
 
-    &--first
-      margin-left: 0
+    &--next
+      margin-left: 11px
 
   &__title
     font-size: larger
@@ -21,16 +40,17 @@
 
   &-property
     display: block
-    margin: 1em
 
     &__input
-      width: 70%
-
-      &--half
-        width: 40%
+      margin-top: 4px
+      width: 100%
 
     &__name
-      margin-bottom: 4pt
+      display: block
+
+    &__result
+      margin: 2px 8px
+      text-align: center
 
     &__value
       color: grey
