Replace custom navigation with React Router (#215)
* Check for current project before showing main UI

* Always set the EXT_SECRET environment variable

This obviates the need to set it with another hard-coded instance in the
CreateProjectDialog component.

* Remove mustSave from CreateProjectDialog component

Whether or not it has a closeHandler serves the same purpose.

* Move ExtensionViewDialog into ExtensionViewContainer

* Move EditViewDialog into ExtensionViewContainer

* Remove unused RigExtensionView properties

* Improve ExtensionViewContainer tests

* Update yarn to version 1.10.1

The additional lines do not affect previous versions.

* Add react-router-dom and types as dependencies

* Replace Booleans with React Routing

* Remove the RigNav error prop

It will never be set.

* Use names for the routes

* Redirect where appropriate

* Hide dialogs if ExtensionViewContainer is hidden

* Stay on current page after browser refresh

* Improve UserDropdown tests

--- a/src/rig-nav/component.sass
+++ b/src/rig-nav/component.sass
@@ -6,10 +6,12 @@
   font-weight: lighter
 
 .top-nav-item
+  color: black
   margin-right: 2rem
   padding: 1rem 0 0.5rem 0
   font-size: 13px
   cursor: pointer
+  text-decoration-line: none
 
 .offset
   margin-left: 1rem
@@ -31,6 +33,7 @@
   box-shadow: 0 -1px 0 #dad8de inset
   color: #dad8de
   cursor: default
+  pointer-events: none
 
 .top-nav-error
   padding: 1em
