Convert new extension view dialog into a form (#220)
* Replace promises with async-await (#216)

* Use async-await in UserDropdown component

* Remove unnecessary promise

Since the filter didn't return anything, there was no promise.

* Fold DivOption CSS file into SASS file (#217)

* Convert new extension view dialog into a form (#219)

* Convert dialog into a form

* Set focus to an element

* Enable DivOption to participate in tab order

* Update ExtensionViewDialog tests

This addresses issue #174.

--- a/src/extension-view-dialog/div-option/component.sass
+++ b/src/extension-view-dialog/div-option/component.sass
@@ -1,38 +1,43 @@
-@import '../component.sass'
 $dimension: 70px
+$offset: $dimension / 2 - 4
 
-.extension-container__block
-  @extend .container__block
+.div-option
+  display: inline-block
   margin: 3px
 
-  .block__extension-type-label
-    visibility: hidden
-    position: absolute
+  &__label
     cursor: pointer
+    display: block
 
-  .extension-type-label__extension-type-text--color-black
-    @extend .extension-type-text
+  &__input
+    margin-left: $offset
+    margin-top: $offset
+    position: absolute
+    transform: scale(0.1, 0.1)
 
-  .extension-type-label__extension-type-text--color-purple
-    @extend .extension-type-text
-    color: #7D55C7
+  &__box
+    border: 1px solid #DAD8DE
+    border-radius: 5px
+    display: table-cell
+    height: $dimension
+    vertical-align: middle
+    width: $dimension
 
-  .dialog-selected
-    color: black
+    &--selected
+      border-color: #7D55C7
 
-.extension-type-box
-  margin-top: 10px
-  margin-right: 12px
-  height: $dimension
-  width: $dimension
-  border-radius: 5px
-  border: 1px solid #DAD8DE
-  display: table-cell
-  vertical-align: middle
-  text-align: center
+  &__image
+    display: block
+    margin: 0 auto
+    position: relative
 
-.extension-type-text
-    margin: 3px
+  &__text
+    color: #706A7C
+    display: block
     font-size: 10px
+    margin-top: 3px
     text-align: center
     width: $dimension
+
+    &--selected
+      color: black
